[gd_scene load_steps=5 format=2]

[ext_resource path="res://Fonts/Titillium-Regular.otf" type="DynamicFontData" id=1]
[ext_resource path="res://Game/CharacterPanel.gd" type="Script" id=2]
[ext_resource path="res://UI/StatusEffectsPanel/StatusEffectsPanel.tscn" type="PackedScene" id=3]

[sub_resource type="DynamicFont" id=7]
size = 28
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="CharacterPanel" type="VBoxContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NameLabel" type="Label" parent="."]
margin_right = 1280.0
margin_bottom = 28.0
custom_fonts/font = SubResource( 7 )
text = "Character name"

[node name="PainLabel" type="Label" parent="."]
margin_top = 32.0
margin_right = 1280.0
margin_bottom = 46.0
text = "Pain"

[node name="LustLabel" type="Label" parent="."]
margin_top = 50.0
margin_right = 1280.0
margin_bottom = 64.0
text = "Lust"

[node name="StatusEffectsPanel" parent="." instance=ExtResource( 3 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 68.0
margin_right = 1280.0
margin_bottom = 68.0
rect_min_size = Vector2( 0, 0 )
